--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.
         </p>
         <p>
-            <a href="#" class="btn btn-primary my-2">Search Books</a>
+            <a href="#" class="btn btn-primary my-2"><i class="fa fa-search"></i> Search Books</a>
         </p>
     </div>
 </section>
