--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -1,11 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    // ViewData["Title"] = "Home Page";
+    dynamic data = ViewBag.Data;
 }
+
 
 <section class="jumbotron text-center">
     <div class="container">
-        <h1>Welcome to Book Store</h1>
+        <h1>Welcome to Book Store @ViewBag.Title</h1>
         <p class="lead text-muted">
+            @data.Id @data.Name
             Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.
         </p>
         <p>
@@ -77,3 +80,4 @@
         </div>
     </div>
 </div>
+
