--- a/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,36 +1,35 @@
 ﻿@model IEnumerable<BookStore.Models.BookModel>
-    @{
-        ViewData["Title"] = "GetAllBooks";
-        Layout = "_Layout";
-    }
+@{
+    ViewData["Title"] = "All Books";
+}
 
-    <h1 class="alert alert-primary text-center">All Books</h1>
+<h1 class="alert alert-primary text-center">All Books </h1>
 
-    <div class="container">
-        <div class="row">
+<div class="container">
+    <div class="row">
 
-            @foreach (var book in Model)
-            {
-                <div class="col-md-4">
-                    <div class="card mb-4 shadow-sm">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
-                            <rect fill="#ddd" width="100%" height="100%" />
-                            <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
-                        </svg>
-                        <div class="card-body">
-                            <h3 class="card-title">@book.Title</h3>
-                            <p class="card-text">@book.Description</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a href="#" class="btn btn-sm btn-secondary">View Details</a>
-                                </div>
-                                <small class="text-muted">@book.Author</small>
+        @foreach (var book in Model)
+        {
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
+                        <rect fill="#ddd" width="100%" height="100%" />
+                        <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
+                    </svg>
+                    <div class="card-body">
+                        <h3 class="card-title">@book.Title</h3>
+                        <p class="card-text">@book.Description</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="/book/getbook/@book.Id" class="btn btn-sm btn-secondary"><i class="fas fa-info-circle"></i> View Details</a>
                             </div>
+                            <small class="text-muted">@book.Author</small>
                         </div>
                     </div>
                 </div>
+            </div>
 
-            }
-        </div>
+        }
     </div>
+</div>
 
