--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Coding Tech</title>
     <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />-->
-    @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" />*@
-    @*<link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css" />*@
-    @*<link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css" />*@
-    @*<link rel="stylesheet" href="https://bootswatch.com/4/spacelab/bootstrap.min.css" />*@
+    <!--! <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" /> -->
+    <!-- *  <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css" />-->
+    <!-- ?   <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css" /> -->
+    <!-- todo <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css" /> -->
+    <!-- !  <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://bootswatch.com/4/spacelab/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Candal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
@@ -26,7 +28,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="#" class="btn btn-success"><i class="fas fa-sign-in-alt"></i> Login</a>
+                            <a href="#" class="btn btn-outline-success"><i class="fas fa-sign-in-alt"></i> Login</a>
                             <a href="#" class="btn btn-primary"><i class="fas fa-sign-out-alt"></i> Register</a>
                         </li>
                     </ul>
@@ -35,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Contact</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="GetAllBooks">Books</a>
@@ -45,6 +47,9 @@
             </div>
         </nav>
     </header>
+
+    @RenderSection("breadcrumb", required: false)
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -53,7 +58,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - Coding Tech - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <i class="fas fa-copyright"></i> @DateTime.Now.Year - Coding Tech - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
