--- a/BookStore/wwwroot/css/site.css
+++ b/BookStore/wwwroot/css/site.css
@@ -35,6 +35,10 @@ a {
     border-color: #1861ac;
 }
 
+/*.btn {
+    border-radius: 50px;
+}*/
+
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: #fff;
     background-color: #1b6ec2;
