--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -22,10 +22,11 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
-                        <rect fill="#ddd" width="100%" height="100%" />
-                        <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
-                    </svg>
+                    @*<svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
+                            <rect fill="#ddd" width="100%" height="100%" />
+                            <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
+                        </svg>*@
+                    <img src="https://unsplash.it/300/225.jpg?image=256" alt="" class="img-fluid" />
                     <div class="card-body">
                         <p class="card-text">
                             In malesuada semper mi, id sollicitudin urna fermentum ut fusce varius nisl.
@@ -41,10 +42,11 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
-                        <rect fill="#ddd" width="100%" height="100%" />
-                        <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
-                    </svg>
+                    @*<svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
+                            <rect fill="#ddd" width="100%" height="100%" />
+                            <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
+                        </svg>*@
+                    <img src="https://unsplash.it/300/225.jpg?image=254" alt="" class="img-fluid" />
                     <div class="card-body">
                         <p class="card-text">
                             In malesuada semper mi, id sollicitudin urna fermentum ut fusce varius nisl.
@@ -60,10 +62,11 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
-                        <rect fill="#ddd" width="100%" height="100%" />
-                        <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
-                    </svg>
+                    @*<svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
+                            <rect fill="#ddd" width="100%" height="100%" />
+                            <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
+                        </svg>*@
+                    <img src="https://unsplash.it/300/225.jpg?image=255" alt="" class="img-fluid" />
                     <div class="card-body">
                         <p class="card-text">
                             In malesuada semper mi, id sollicitudin urna fermentum ut fusce varius nisl.
