--- a/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/Views/Book/GetAllBooks.cshtml
@@ -12,11 +12,11 @@
         {
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://source.unsplash.com/random/book" alt="https://source.unsplash.com/random/book" width="100%" height="225" />
-                    @*<svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
-                            <rect fill="#ddd" width="100%" height="100%" />
-                            <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
-                        </svg>*@
+                    @* <img src="https://source.unsplash.com/random/book" alt="https://source.unsplash.com/random/book" width="100%" height="225" /> *@
+                    <svg xmlns="http://www.w3.org/2000/svg" class="bd-placeholder-img card-img-top" width="100%" height="225" viewBox="0 0 100% 225">
+                        <rect fill="#ddd" width="100%" height="100%" />
+                        <text fill="rgba(0,0,0,0.7)" font-family="sans-serif" font-size="30" dy="10.5" font-weight="bold" x="50%" y="50%" text-anchor="middle">Thumbnail</text>
+                    </svg>
                     <div class="card-body">
                         <h3 class="card-title">@book.Title</h3>
                         <p class="card-text">@book.Description</p>
