--- a/BookStore/Views/Book/GetBook.cshtml
+++ b/BookStore/Views/Book/GetBook.cshtml
@@ -1,7 +1,7 @@
 ﻿@using BookStore.Models;
 @model BookModel
 @{
-    ViewData["Title"] = "Book Details";
+    ViewData["Title"] = "Book Details " + Model.Title;
 }
 
 <h3 class="display-4">Book Details</h3>
@@ -15,8 +15,8 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    @*<img src="~/images/book/book1.jpg" class="d-block w-100" alt="...">*@
-                    <img src="https://picsum.photos/seed/picsum/535/320" class="d-block w-100" alt="...">
+                    <img src="~/images/book/book1.jpg" class="d-block w-100" alt="...">
+                    @* <img src="https://picsum.photos/seed/picsum/535/320" class="d-block w-100" alt="..."> *@
                 </div>
                 <div class="carousel-item">
                     <img src="~/images/book/book2.jpg" class="d-block w-100" alt="...">
