--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -4,14 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Coding Tech</title>
-    <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />-->
+    <link href="~/css/dm-bootstrap.css" rel="stylesheet" />
+    @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
     <!--! <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" /> -->
     <!-- *  <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css" />-->
     <!-- ?   <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css" /> -->
     <!-- todo <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css" /> -->
     <!-- !  <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css" />
     <link rel="stylesheet" href="https://bootswatch.com/4/spacelab/bootstrap.min.css" /> -->
-    <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" />
+    @* <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" /> *@
     <link href="https://fonts.googleapis.com/css2?family=Candal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
